force-app/main/default/objects/Charity_Donation__c/Charity_Donation__c.object-meta.xml
<CustomObject>
    <description>Contains Donation infomation</description>
    <label>Charity Donation</label>
    <nameField>
        <label>Charity Donation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Charity Donations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>