force-app/main/default/objects/Charity_Donation__c/fields/Donar_Name__c.field-meta.xml
<CustomField>
    <fullName>Donar_Name__c</fullName>
    <description>Contains the Donar name</description>
    <label>Donar Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>