force-app/main/default/objects/Charity_Donation__c/fields/Donation_ID__c.field-meta.xml
<CustomField>
    <fullName>Donation_ID__c</fullName>
    <description>Contains Donation ID</description>
    <label>Donation ID</label>
    <type>AutoNumber</type>
</CustomField>